[package]
name = "file-find"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.11.1"
ignore = "0.4.23"
humantime = "2.1"
normpath = "1.1.1"

[dependencies.chrono]
version = "0.4.39"
default-features = false
features = ["std", "clock"]

[dependencies.lscolors]
version = "0.20"
default-features = false
features = ["nu-ansi-term"]